--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -3877,6 +3877,8 @@
 .FSCpart1Title.close{
     transition: 1s;
 	margin-top: 17.5%;
+	margin-left: 10.42%;
+	width: 39.06%;
 	background-color: #1E3239;
 }
 
@@ -3956,6 +3958,8 @@
 .FSCpart2Title.close{
     transition: 1s;
 	margin-top: 17.5%;
+	margin-left: 50.89%;
+	width: 39.06%;
 	background-color: #1E3239;
 }
 
@@ -4034,6 +4038,8 @@
 .FSCpart3Title.close{
 	transition: 1s;
 	margin-top: 41.5%;
+	margin-left: 10.42%;
+	width: 39.06%;
 	background-color: #1E3239;
 }
 
@@ -4113,6 +4119,8 @@
 .FSCpart4Title.close{
 	transition: 1s;
 	margin-top: 41.5%;
+	margin-left: 50.89%;
+	width: 39.06%;
 	background-color: #1E3239;
 }
 
