--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -1908,7 +1908,7 @@
 	height: 100%;
 	background-color: transparent;
 	font-size: 2.2rem;
-	display: none;
+	display: flex;
 	align-items: center;
 	color: #ffffff;
 	line-height: 2;
@@ -1917,8 +1917,8 @@
 	 
 }
 .FFCAmazonContenttext.open{
-	display: flex;
-	transition: 1s opacity 3s;
+	
+	transition: 3s;
 	opacity: 1;
 }
 
