--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -1908,7 +1908,7 @@
 	height: 100%;
 	background-color: transparent;
 	font-size: 2.2rem;
-	display: flex;
+	display: none;
 	align-items: center;
 	color: #ffffff;
 	line-height: 2;
@@ -1918,6 +1918,7 @@
 }
 .FFCAmazonContenttext.open{
 	transition: 1s;
+	display: flex;
 	opacity: 1;
 }
 
