--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -1897,7 +1897,7 @@
 	margin-left: 0%;
 	width: 41.67%;
 	padding-bottom: 56%;
-	background-color: #1E3239;
+	background-color: #ffffff;
 	opacity: 0.95;
 	display: flex;
 	color: #ffffff;
