--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -1971,53 +1971,24 @@
 }
 
 
-.FFCNAEUJPContent{
-	position: absolute;
-	z-index: -1;
-	margin-top: 0%;
-	margin-left: 0%;
-	width: 0%;
-	background-color: transparent;
-	color: transparent;
-	font-size: 2.2rem;
-	opacity: 0;
-}
-.FFCNAEUJPContent.open{
-	position: absolute;
-	margin-top: 0%;
-	margin-left: 0%;
-	width: 41.67%;
-	padding-bottom: 56%;
-	background-color: transparent;
-	opacity: 0.95;
-	display: flex;
-	color: #ffffff;
-	
-}
-
 .FFCNAEUJPContenttext{
 	position: absolute;
-	margin-top: 25%;
+	margin-top: 0%;
 	margin-left: 12.5%;
 	width: 100%;
-	padding-bottom: 20%;
+	height: 100%;
 	background-color: transparent;
 	font-size: 2.2rem;
-	display: none;
+	display: flex;
 	align-items: center;
-	justify-content: flex-start;
+	color: #ffffff;
 	line-height: 2;
 	opacity: 0;
 	 
 }
 .FFCNAEUJPContenttext.open{
-	display: flex;
-	transition: 1s opacity  0.5s;
+	transition: 1s;
 	opacity: 1;
-}
-.FFCNAEUJPContenttext.close{
-	transition: 1s opacity  0.5s;
-	opacity: 0;
 }
 
 .FFCSBL{
