--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -1993,51 +1993,6 @@
 	-webkit-filter:brightness(1.2);
 }
 
-
-.FFCIconContent{
-	position: absolute;
-	z-index: -1;
-	margin-top: 0%;
-	margin-left: 0%;
-	width: 0%;
-	background-color: transparent;
-	color: transparent;
-	font-size: 2.2rem;
-	opacity: 0;
-}
-.FFCIconContent.open{
-	position: absolute;
-	margin-top: 0%;
-	margin-left: 0%;
-	width: 41.67%;
-	padding-bottom: 56%;
-	background-color: transparent;
-	opacity: 0.95;
-	display: flex;
-	color: #ffffff;
-	
-}
-
-.FFCIconContenttext{
-	position: absolute;
-	margin-top: 45%;
-	margin-left: 12.5%;
-	width: 100%;
-	padding-bottom: 20%;
-	background-color: transparent;
-	font-size: 2.2rem;
-	display: none;
-	align-items: center;
-	justify-content: flex-start;
-	line-height: 2;
-	opacity: 0;
-	 
-}
-.FFCIconContenttext.open{
-	display: flex;
-	transition: 1s opacity  0.5s;
-	opacity: 1;
-}
 .FFCContenttext{
 	position: absolute;
 	z-index: 16;
@@ -2135,6 +2090,26 @@
 	 
 }
 .FFCAUSContenttext.open{
+	transition: 1s;
+	opacity: 1;
+}
+
+.FFCIconContenttext{
+	position: absolute;
+	margin-top: 0%;
+	margin-left: 12.5%;
+	width: 100%;
+	height: 100%;
+	background-color: transparent;
+	font-size: 2.2rem;
+	display: flex;
+	align-items: center;
+	color: #ffffff;
+	line-height: 2;
+	opacity: 0;
+	 
+}
+.FFCIconContenttext.open{
 	transition: 1s;
 	opacity: 1;
 }
