--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -2219,9 +2219,10 @@
 	opacity: 1;
 	display: flex;
 	visibility: hidden;	
-	
 }
-
+.HWCContenttext.open{
+	visibility: visible;	
+}
 .HWCintroduction{
 	position: absolute;
 	margin-top: 0%;
