--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -2293,21 +2293,20 @@
 
 .HWCWEUContenttext{
 	position: absolute;
-	margin-top: 25%;
+	margin-top: 0%;
 	margin-left: 12.5%;
 	width: 100%;
-	padding-bottom: 20%;
+	height: 100%;
 	background-color: transparent;
 	font-size: 2.2rem;
-	display: none;
+	display: flex;
 	align-items: center;
-	justify-content: flex-start;
+	color: #ffffff;
 	line-height: 2;
 	opacity: 0;
 	 
 }
 .HWCWEUContenttext.open{
-	display: flex;
 	transition: 1s opacity  0.5s;
 	opacity: 1;
 }
