--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -2257,7 +2257,28 @@
 	
 	opacity: 1;	
 }
+.HWCENNL{
+	position: absolute;
+	z-index: 17;
+	margin-top: 26.1%;
+	margin-left: 48.3%;
+	width: 3.34%;
+	opacity: 0;
+	color: #ffffff;
+	font-size: 2.2rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 
+}
+.HWCENNL:hover{
+	transition: 1s;
+	opacity: 1;
+}
+.HWCENNL.open{
+	
+	opacity: 1;	
+}
 .HWCWEUContenttext{
 	position: absolute;
 	margin-top: 0%;
@@ -2280,72 +2301,26 @@
 	visibility: visible;
 }
 
-.HWCpart2{
-	position: absolute;
-	z-index: 17;
-	margin-top: 26.1%;
-	margin-left: 48.3%;
-	width: 3.34%;
-	opacity: 0;
-	color: #ffffff;
-	font-size: 2.2rem;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-
-}
-.HWCpart2:hover{
-	transition: 1s;
-	opacity: 1;
-}
-.HWCpart2.open{
-	
-	opacity: 1;	
-}
-
-.HWCpart2Content{
-	position: absolute;
-	z-index: -1;
-	margin-top: 0%;
-	margin-left: 0%;
-	width: 0%;
-	background-color: transparent;
-	color: transparent;
-	font-size: 2.2rem;
-	opacity: 0;
-}
-.HWCpart2Content.open{
+.HWCENNLContenttext{
 	position: absolute;
 	margin-top: 0%;
-	margin-left: 0%;
-	width: 41.67%;
-	padding-bottom: 56%;
-	background-color: transparent;
-	opacity: 0.95;
-	display: flex;
-	color: #ffffff;
-	
-}
-
-.HWCpart2Contenttext{
-	position: absolute;
-	margin-top: 25%;
 	margin-left: 12.5%;
 	width: 100%;
-	padding-bottom: 20%;
+	height: 100%;
 	background-color: transparent;
 	font-size: 2.2rem;
-	display: none;
+	display: flex;
 	align-items: center;
-	justify-content: flex-start;
+	color: #ffffff;
 	line-height: 2;
 	opacity: 0;
+	visibility: hidden;
 	 
 }
-.HWCpart2Contenttext.open{
-	display: flex;
-	transition: 1s opacity  0.5s;
+.HWCENNLContenttext.open{
+	transition: 1s ;
 	opacity: 1;
+	visibility: visible;;
 }
 
 .HWCpart3{
