--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -2276,10 +2276,10 @@
 .HWCENNLContenttext.open{
 	transition: 1s ;
 	opacity: 1;
-	visibility: visible;;
+	visibility: visible;
 }
 
-.HWCpart3{
+.HWCSWE{
 	position: absolute;
 	z-index: 17;
 	margin-top: 21.6%;
@@ -2297,58 +2297,34 @@
 	margin-left: -148%;
 	margin-top: 342%;
 }
-.HWCpart3:hover{
+.HWCSWE:hover{
 	transition: 1s;
 	opacity: 1;
 }
-.HWCpart3.open{	
+.HWCSWE.open{	
 	opacity: 1;	
 }
 
-
-.HWCpart3Content{
-	position: absolute;
-	z-index: -1;
-	margin-top: 0%;
-	margin-left: 0%;
-	width: 0%;
-	background-color: transparent;
-	color: transparent;
-	font-size: 2.2rem;
-	opacity: 0;
-}
-.HWCpart3Content.open{
+.HWCSWEContenttext{
 	position: absolute;
 	margin-top: 0%;
-	margin-left: 0%;
-	width: 41.67%;
-	padding-bottom: 56%;
-	background-color: transparent;
-	opacity: 0.95;
-	display: flex;
-	color: #ffffff;
-	
-}
-
-.HWCpart3Contenttext{
-	position: absolute;
-	margin-top: 25%;
 	margin-left: 12.5%;
 	width: 100%;
-	padding-bottom: 20%;
+	height: 100%;
 	background-color: transparent;
 	font-size: 2.2rem;
-	display: none;
+	display: flex;
 	align-items: center;
-	justify-content: flex-start;
+	color: #ffffff;
 	line-height: 2;
 	opacity: 0;
+	visibility: hidden;
 	 
 }
-.HWCpart3Contenttext.open{
-	display: flex;
-	transition: 1s opacity  0.5s;
+.HWCSWEContenttext.open{
+	transition: 1s ;
 	opacity: 1;
+	visibility: visible;
 }
 
 
