--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -2328,7 +2328,7 @@
 }
 
 
-.HWCpart4{
+.HWCJP{
 	position: absolute;
 	z-index: 17;
 	margin-top: 30.7%;
@@ -2341,60 +2341,34 @@
 	align-items: center;
 	justify-content: center;
 }
-.HWCpart4:hover{
+.HWCJP:hover{
 	transition: 1s;
 	opacity: 1;
 }
 
-.HWCpart4.open{
-	
+.HWCJP.open{
 	opacity: 1;	
 }
 
-
-.HWCpart4Content{
-	position: absolute;
-	z-index: -1;
-	margin-top: 0%;
-	margin-left: 0%;
-	width: 0%;
-	background-color: transparent;
-	color: transparent;
-	font-size: 2.2rem;
-	opacity: 0;
-}
-.HWCpart4Content.open{
+.HWCJPContenttext{
 	position: absolute;
 	margin-top: 0%;
-	margin-left: 0%;
-	width: 41.67%;
-	padding-bottom: 56%;
-	background-color: transparent;
-	opacity: 0.95;
-	display: flex;
-	color: #ffffff;
-	
-}
-
-.HWCpart4Contenttext{
-	position: absolute;
-	margin-top: 55%;
 	margin-left: 12.5%;
 	width: 100%;
-	padding-bottom: 20%;
+	height: 100%;
 	background-color: transparent;
 	font-size: 2.2rem;
-	display: none;
+	display: flex;
 	align-items: center;
-	justify-content: flex-start;
+	color: #ffffff;
 	line-height: 2;
 	opacity: 0;
-	 
+	visibility: hidden;
 }
-.HWCpart4Contenttext.open{
-	display: flex;
-	transition: 1s opacity  0.5s;
+.HWCJPContenttext.open{
+	transition: 1s ;
 	opacity: 1;
+	visibility: visible;
 }
 .ExtremeClimate{
 	width: 100%;
