--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -2472,21 +2472,23 @@
 
 .ECCintroduction{
 	position: absolute;
-	margin-top: 150%;
+	margin-top: 0%;
+	margin-left: 12.5%;
 	width: 100%;
-	padding-bottom: 20%;
+	height: 100%;
 	background-color: transparent;
 	font-size: 2.2rem;
 	display: flex;
 	align-items: center;
-	justify-content: flex-start;
+	color: #ffffff;
 	line-height: 2;
 	opacity: 0;
-	 
+	visibility: hidden;
 }
 .ECCintroduction.open{
-	transition: 1s opacity  0.5s;
+	transition: 1s ;
 	opacity: 1;
+	visibility: hidden;
 }
 
 
