--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -2134,7 +2134,7 @@
 	margin-left: -100%;
 	width: 100%;
 	padding-bottom: 13.5%;
-	background-color: #163C4B;
+	background-color: #ffffff;
 	opacity: 1;
 	display: flex;
 	align-items: center;
