--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -2134,7 +2134,7 @@
 	margin-left: -100%;
 	width: 100%;
 	padding-bottom: 13.5%;
-	background-color: #ffffff;
+	background-color: #163C4B;
 	opacity: 1;
 	display: flex;
 	align-items: center;
@@ -2222,7 +2222,7 @@
 	width: 7.135%;
 	opacity: 0;
 	color: #ffffff;
-	background-color: transparent;
+	background-color: #ffffff;
 	font-size: 2.2rem;
 	display: flex;
 	align-items: center;
