--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -2222,7 +2222,7 @@
 	width: 7.135%;
 	opacity: 0;
 	color: #ffffff;
-	background-color: #ffffff;
+	background-color: transparent;
 	font-size: 2.2rem;
 	display: flex;
 	align-items: center;
@@ -2266,7 +2266,7 @@
 	margin-left: 12.5%;
 	width: 100%;
 	height: 100%;
-	background-color: transparent;
+	background-color: #ffff;
 	font-size: 2.2rem;
 	display: flex;
 	align-items: center;
