--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -2177,7 +2177,7 @@
 }
 .HWCContenttext{
 	position: absolute;
-	z-index: 16;
+	z-index: 17;
 	margin-top: 0%;
 	margin-left: 0%;
 	width: 41.67%;
@@ -2246,7 +2246,6 @@
 	opacity: 0;
 	color: #ffffff;
 	background-color: transparent;
-	font-size: 2.2rem;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -2266,7 +2265,7 @@
 	margin-left: 12.5%;
 	width: 100%;
 	height: 100%;
-	background-color: #ffff;
+	background-color: transparent;
 	font-size: 2.2rem;
 	display: flex;
 	align-items: center;
