--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -2220,6 +2220,7 @@
 	margin-top: 27.4%;
 	margin-left: 47.3%;
 	width: 7.135%;
+	height: auto;
 	opacity: 0;
 	color: #ffffff;
 	background-color: transparent;
@@ -2243,6 +2244,7 @@
 	margin-top: 26.1%;
 	margin-left: 48.3%;
 	width: 3.34%;
+	height: auto;
 	opacity: 0;
 	color: #ffffff;
 	background-color: transparent;
@@ -2309,6 +2311,7 @@
 	margin-top: 21.6%;
 	margin-left: 52.8%;
 	width: 3.29%;
+	height: auto;
 	color: #ffffff;
 	background-color: transparent;
 	font-size: 2.2rem;
@@ -2359,6 +2362,7 @@
 	margin-top: 30.7%;
 	margin-left: 84%;
 	width: 4.29%;
+	height: auto;
 	color: #ffffff;
 	background-color: transparent;
 	font-size: 2.2rem;
