--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -2339,7 +2339,7 @@
 	margin-left: 12.5%;
 	width: 100%;
 	height: 100%;
-	background-color: transparent;
+	background: none;
 	font-size: 2.2rem;
 	display: flex;
 	align-items: center;
