--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -2163,6 +2163,7 @@
 	background: none;
 	color: #ffffff;
 	font-size: 2.2rem;
+	border: 2px solid red;
 	opacity: 1;
 	display: flex;
 	visibility: hidden;	
@@ -2205,6 +2206,7 @@
 	align-items: center;
 	justify-content: center;
 }
+
 .HWCWEU:hover{
 	transition: 1s;
 	opacity: 1;
