--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -2123,7 +2123,10 @@
 	justify-content: flex-end;
 
 }
+.HWCBG:hover{
+	-webkit-filter:brightness(1);
 
+}
 .HWCBG.open{
 	-webkit-transition: 2s;
     -moz-transition: 2s;
