--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -2184,12 +2184,12 @@
 	visibility: hidden;
 	transition: 1s;
 	 
-}/*
+}
 .HWCintroduction.open{
 	opacity: 1;
 	visibility: visible;
 }
-*/
+
 .HWCWEU{
 	position: absolute;
 	z-index: 17;
@@ -2197,23 +2197,23 @@
 	margin-left: 47.3%;
 	width: 7.135%;
 	height: auto;
-	opacity: 1;
+	opacity: 0;
 	background-color: transparent;
 	font-size: 2.2rem;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	transition: 0.5s;
-	visibility: visible;
 }
 
 .HWCWEU:hover{
-	visibility: visible;
+	
+	opacity: 1;
 }
-/*
+
 .HWCWEU.open{
 	opacity: 1;	
-}*/
+}
 .HWCENNL{
 	position: absolute;
 	z-index: 18;
@@ -2221,23 +2221,21 @@
 	margin-left: 48.3%;
 	width: 3.34%;
 	height: auto;
-	opacity: 1;
+	opacity: 0;
 	background-color: transparent;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	transition: 0.5s;
-	visibility: hidden;
 
 }
 .HWCENNL:hover{
-	visibility: visible;
+	opacity: 1;
 }
-/*
 .HWCENNL.open{
 	
 	opacity: 1;	
-}*/
+}
 .HWCWEUContenttext{
 	position: absolute;
 	margin-top: 0%;
@@ -2289,12 +2287,11 @@
 	height: auto;
 	background-color: transparent;
 	font-size: 2.2rem;
-	opacity: 1;
+	opacity: 0;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	transition: 0.5s;
-	visibility: hidden;
 }
 .HWCSWL{
 	position: absolute;
@@ -2303,12 +2300,12 @@
 }
 .HWCSWE:hover{
 	
-	visibility: visible;
-}/*
+	opacity: 1;
+}
 .HWCSWE.open{	
 	opacity: 1;	
 }
-*/
+
 .HWCSWEContenttext{
 	position: absolute;
 	margin-top: 0%;
@@ -2340,21 +2337,21 @@
 	height: auto;
 	background-color: transparent;
 	font-size: 2.2rem;
-	opacity: 1;
+	opacity: 0;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	transition: 0.5s;
-	visibility: hidden;
 }
 .HWCJP:hover{
-	visibility: visible;
+	
+	opacity: 1;
 }
-/*
+
 .HWCJP.open{
 	opacity: 1;	
 }
-*/
+
 .HWCJPContenttext{
 	position: absolute;
 	margin-top: 0%;
