--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -2532,7 +2532,28 @@
 	opacity: 1;
 	visibility: visible;
 }
-.ECCpart1{
+.ECCJPContenttext{
+	position: absolute;
+	margin-top: 0%;
+	margin-left: 12.5%;
+	width: 100%;
+	height: 100%;
+	background-color: transparent;
+	font-size: 2.2rem;
+	display: flex;
+	align-items: center;
+	color: #ffffff;
+	line-height: 2;
+	opacity: 0;
+	visibility: hidden;
+	 
+}
+.ECCJPContenttext.open{
+	transition: 1s ;
+	opacity: 1;
+	visibility: visible;
+}
+.ECCJP{
 	position: absolute;
 	z-index: 17;
 	margin-top: 25%;
@@ -2545,60 +2566,13 @@
 	align-items: center;
 	justify-content: center;
 }
-.ECCpart1:hover{
+.ECCJP:hover{
 	transition: 1s;
 	opacity: 1;
 }
 
-.ECCpart1.open{
-	
+.ECCJP.open{
 	opacity: 1;	
-}
-
-.ECCpart1Content{
-	position: absolute;
-	z-index: -1;
-	margin-top: 0%;
-	margin-left: 0%;
-	width: 0%;
-	background-color: transparent;
-	color: transparent;
-	font-size: 2.2rem;
-	opacity: 0;
-	
-}
-.ECCpart1Content.open{
-	position: absolute;
-	margin-top: 0%;
-	margin-left: 0%;
-	width: 41.67%;
-	padding-bottom: 56%;
-	background-color: transparent;
-	opacity: 0.95;
-	display: flex;
-	color: #ffffff;
-	
-}
-
-.ECCpart1Contenttext{
-	position: absolute;
-	margin-top: 40%;
-	margin-left: 12.5%;
-	width: 100%;
-	padding-bottom: 20%;
-	background-color: transparent;
-	font-size: 2.2rem;
-	display: none;
-	align-items: center;
-	justify-content: flex-start;
-	line-height: 2;
-	opacity: 0;
-	 
-}
-.ECCpart1Contenttext.open{
-	display: flex;
-	transition: 1s opacity  0.5s;
-	opacity: 1;
 }
 
 .ECCpart2{
