--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -2575,7 +2575,7 @@
 	opacity: 1;	
 }
 
-.ECCpart2{
+.ECCCN{
 	position: absolute;
 	z-index: 17;
 	margin-top: 23.4%;
@@ -2590,60 +2590,35 @@
 	
 }
 
-.ECCpart2:hover{
+.ECCCN:hover{
 	transition: 1s;
 	opacity: 1;
 }
-.ECCpart2.open{
-	
+.ECCCN.open{
 	opacity: 1;	
 }
 
-.ECCpart2Content{
-	position: absolute;
-	z-index: -1;
-	margin-top: 0%;
-	margin-left: 0%;
-	width: 0%;
-	background-color: transparent;
-	color: transparent;
-	font-size: 2.2rem;
-	opacity: 0;
-}
-
-.ECCpart2Content.open{
+.ECCCNContenttext{
 	position: absolute;
 	margin-top: 0%;
-	margin-left: 0%;
-	width: 41.67%;
-	padding-bottom: 56%;
-	background-color: transparent;
-	opacity: 0.95;
-	display: flex;
-	color: #ffffff;
-	
-}
-
-.ECCpart2Contenttext{
-	position: absolute;
-	margin-top: 40%;
 	margin-left: 12.5%;
 	width: 100%;
-	padding-bottom: 20%;
+	height: 100%;
 	background-color: transparent;
 	font-size: 2.2rem;
-	display: none;
+	display: flex;
 	align-items: center;
-	justify-content: flex-start;
+	color: #ffffff;
 	line-height: 2;
 	opacity: 0;
+	visibility: hidden;
 	 
 }
 
-.ECCpart2Contenttext.open{
-	display: flex;
-	transition: 1s opacity  0.5s;
+.ECCCNContenttext.open{
+	transition: 1s ;
 	opacity: 1;
+	visibility: visible;
 }
 
 .ECCpart3{
